Fix bad merge